Work Section Header Change
Colors in work section tweaked as well

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="https://fonts.googleapis.com/css?family=Biryani%7CLobster" rel="stylesheet">
-    <link rel="stylesheet" href="css/lg-fb-comment-box.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Biryani%7CShadows+Into+Light" rel="stylesheet">
+  <link rel="stylesheet" href="css/lg-fb-comment-box.min.css">
   <link rel="stylesheet" href="css/lg-transitions.min.css">
   <link rel="stylesheet" href="css/lightgallery.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -50,7 +50,7 @@
       </div>
 
       <div class="wrapper">
-        <h2>Graphic Design</h2>
+        <h2 class="h2-heading">Print Design</h2>
           <div id="lightGallery">
               <a href="img/portfolio/graphic-design/Baby-Shower.jpg">
                 <img class="first caption" src="img/portfolio/thumbnails/Baby-Shower-thumbnail.jpg" alt="I designed this on some of my free time. Sometimes, I just feel the need to design something." title ="Baby Shower Invitation">
@@ -81,7 +81,7 @@
               </a>
           </div>
 
-          <h2>Web Design</h2>
+          <h2 class="h2-heading">Web Design</h2>
           <div id="web-design">
             <a href="https://gschweizer.github.io/Personal-Profile-Page/">
               <div class="wrap">
