--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="https://fonts.googleapis.com/css?family=Biryani%7CLobster" rel="stylesheet">
-    <link rel="stylesheet" href="css/lg-fb-comment-box.min.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:700" rel="stylesheet">
+  <link rel="stylesheet" href="css/lg-fb-comment-box.min.css">
   <link rel="stylesheet" href="css/lg-transitions.min.css">
   <link rel="stylesheet" href="css/lightgallery.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -19,73 +20,87 @@
 <body>
 
 <header id="top">
-    <img class="logo" src="img/header-logo.svg" alt="The website title">
+    <img class="logo" src="img/header_phone.svg" alt="The website title">
+</header>
+
     <ul class="main-nav">
       <li><a href="#about-anchor">about</a></li>
-      <li><a href="#work-anchor">portfolio</a></li>
+      <li><a href="#work-anchor">work</a></li>
       <li><a href="#contact-anchor">contact</a></li>
     </ul>
-</header>
 
 <!--================ABOUT SECTION=================-->
 
-    <div class="heading-about" id="about-anchor">
-      <img class="about-h1" src="img/about-title.svg" alt="about-lets learn text">
-    </div>
 
     <div id="about">
-      <img class="profile-img" src="img/Me.png" alt="Photo of my face">
+      <img class="me" src="img/me2-bw.jpg" alt="picture of me" id="about-anchor">
       <div class="about-paragraph">
-        <h2 class="hi-there">Hi there!</h2>
-          <p>I’m Gina. Ever since I was a little girl, I've loved expressing my creativity in any way I could. In college, I was introduced to the wonderful world of Adobe. Using Illustrator, Photoshop, and InDesign, the possibilities were endless! I started designing logos, brochures, labels and any other kind of print media and soon began to dabble in web design. I love to learn and constantly improve my skills as a designer. I would love to be part of a team who has the same interests so that we could grow together!</p>
-          <p>Feel free to browse around my portfolio!</p>
+        <h2 class="about-title">About</h2>
+          <p>Ever since I was a little girl, I've loved expressing my creativity in any way I could. In college, I was introduced to the wonderful world of Adobe. Using Illustrator, Photoshop, and InDesign, the possibilities were endless! I started designing logos, brochures, labels and any other kind of print media and soon began to dabble in web design. I love to learn and constantly improve my skills as a designer. I would love to be part of a team who has the same interests so that we could grow together!</p>
+          <p>Feel free to send me a message or browse around my portfolio.</p>
       </div>
     </div>
 
 <!--================WORK SECTION=================-->
 
-    <div id="work">
-      <div class="heading-work" id="work-anchor">
-        <img class="work-h1" src="img/work-title.svg" alt="work-lets browse text">
-      </div>
+    <div id="work-anchor">
+      <img class="work-h1" src="img/work-graphics-head.png" alt="graphics work title">
+    </div>
 
       <div class="wrapper">
-        <h2>Graphic Design</h2>
           <div id="lightGallery">
               <a href="img/portfolio/graphic-design/Baby-Shower.jpg">
-                <img class="first caption" src="img/portfolio/thumbnails/Baby-Shower-thumbnail.jpg" alt="I designed this on some of my free time. Sometimes, I just feel the need to design something." title ="Baby Shower Invitation">
+                <img class="first-graphics" src="img/portfolio/thumbnails/BabyShower.jpg" alt="I designed this on some of my free time. Sometimes, I just feel the need to design something." title ="Baby Shower Invitation">
               </a>
               <a href="img/portfolio/graphic-design/Brush-Fairy-Matchbox.jpg">
-                <img class="caption" src="img/portfolio/thumbnails/Brush-Fairy-thumbnail.jpg" alt="This box is designed to deliver toothbrushes to kids in the mail." title="Brush Fairy Matchbox">
+                <img class="caption" src="img/portfolio/thumbnails/BrushFairy.jpg" alt="This box is designed to deliver toothbrushes to kids in the mail." title="Brush Fairy Matchbox">
               </a>
-              <a href="img/portfolio/graphic-design/Shadeshack.jpg">
-                <img class="caption" src="img/portfolio/thumbnails/Shadeshack-thumbnail.jpg" alt="Here's a logo that I designed for an online business that sells prescription and non-prescription eyewear." title="Shadeshack Logo">
-              </a>
-              <a href="img/portfolio/graphic-design/Fundanoodle-Labels.jpg">
-                <img class="caption" src="img/portfolio/thumbnails/Fundanoodle-Labels-thumbnail.jpg" alt="These labels meant to go on the front of trays that hold activity books for kids." title="Fundanoodle Labels">
-              </a>
-              <a href="img/portfolio/graphic-design/Invitation.jpg">
-                <img class="caption" src="img/portfolio/thumbnails/Invitation-thumbnail.jpg" alt="My wedding invitations were another opportunity for me to get creative." title="Wedding Invitation">
-              </a>
-              <a href="img/portfolio/graphic-design/Latitude35-hoodie.jpg">
-                <img class="caption" src="img/portfolio/thumbnails/Latitude35-hoodie-thumbnail.jpg" alt="I was asked by my gym to design some mockups for a hoodie they wanted to sell." title="Latitude35 Hoodie">
-              </a>
-              <a href="img/portfolio/graphic-design/Launchpad-Graphics.jpg">
-                <img class="caption" src="img/portfolio/thumbnails/Launchpad-Graphics-thumbnail.jpg" alt="This is a mailer that holds some computer software for marketing purposes." title="Launchpad Folder">
-              </a>
-              <a href="img/portfolio/graphic-design/Programs.jpg">
-                <img class="caption" src="img/portfolio/thumbnails/Programs-thumbnail.jpg" alt="For my wedding, I had the opportunity to design and print my programs." title="Wedding Programs">
+              <a href="img/portfolio/graphic-design/CarolinasInsurance.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/CarolinasInsurance.jpg" alt="This is a logo I designed for one of my freelance clients." title="Carolinas Insurance Logo">
               </a>
               <a href="img/portfolio/graphic-design/Younique-display.jpg">
-                <img class="caption" src="img/portfolio/thumbnails/Younique-Display-thumbnail.jpg" alt="While I was a representative for Younique, I designed my own counter display and business cards." title="Younique Display">
+                <img class="caption" src="img/portfolio/thumbnails/YouniqueCard.jpg" alt="While I was a representative for Younique, I designed my own counter display and business cards." title="Younique Display">
+              </a>
+              <a href="img/portfolio/graphic-design/InsightsIntoAction.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/InsightsIntoAction.jpg" alt="This logo was used in a presentation for the company's sales people." title="Insights Into Action Logo">
+              </a>
+              <a href="img/portfolio/graphic-design/RetailWithAPurpose.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/RetailWithAPurpose.jpg" alt="The following year, the client requested another logo to be used in a presentation for the company's sales people." title="Retail with a Purpose Logo">
+              </a>
+              <a href="img/portfolio/graphic-design/Latitude35-hoodie.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/L35Crossfit.jpg" alt="I was asked by my gym to design some mockups for a hoodie they wanted to sell." title="Latitude35 Hoodie">
+              </a>
+              <a href="img/portfolio/graphic-design/Programs.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/Programs.jpg" alt="These are the programs I designed for my wedding which doubled as fans. They definitely came in handy at the end of July." title="Wedding Programs">
+              </a>
+              <a href="img/portfolio/graphic-design/ShadeShack_glasses.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/ShadeShack.jpg" alt="I designed this logo for an ecommerce website." title="Shade Shack Logo">
+              </a>
+              <a href="img/portfolio/graphic-design/ShaineID.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/ShaineID.jpg" alt="This is a label I designed for a young racer. He added it to his trailor and bikes." title="Shaine 'The Hooligan' Rider ID">
+              </a>
+              <a href="img/portfolio/graphic-design/TrueBlueBrewing.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/TrueBlueBrewing.jpg" alt="One of my first freelance client logo designs." title="True Blue Brewing Round Logo">
+              </a>
+              <a href="img/portfolio/graphic-design/TrueBlueLong.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/TrueBlueBrewingLong.jpg" alt="True Blue also wanted their logo in a different format." title="True Blue Brewing Long Logo">
+              </a>
+              <a href="img/portfolio/graphic-design/CleverTrout.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/CleverTrout.jpg" alt="This is another logo I designed for a freelance client of mine." title="Clever Trout Logo">
+              </a>
+              <a href="img/portfolio/graphic-design/Launchpad-Graphics.jpg">
+                <img class="caption" src="img/portfolio/thumbnails/Launchpad.jpg" alt="This is a mailer that holds computer software for marketing purposes." title="Launchpad Graphics Mailer">
               </a>
           </div>
 
-          <h2>Web Design</h2>
+          <div id="web-design-head">
+            <img class="work-h1" src="img/work-web-head.png" alt="web work title">
+          </div>
+
           <div id="web-design">
             <a href="https://gschweizer.github.io/Personal-Profile-Page/">
-              <div class="wrap">
-                <img class="first" src="img/portfolio/Personal-Profile-Page.jpg" alt="Profile website image" title="Personal Profile Project Link">
+              <div class="wrap first-wrap">
+                <img class="first-web" src="img/portfolio/Personal-Profile-Page.jpg" alt="Profile website image" title="Personal Profile Project Link">
                 <p class="imgDesc">This is the my first project in the Treehouse Techdegree Program. It was also my first experience using Github.<br>
                 <span>Click to view live.</span></p>
               </div>
@@ -133,26 +148,40 @@
               </div>
             </a>
             <a href="https://gschweizer.github.io/Web-App-Dashboard/">
-              <div class="wrap">
+              <div class="wrap last-wrap">
                 <img src="img/portfolio/Web-App-Dashboard.jpg" alt="Online Registration website image" title="Online Registration Project Link">
                 <p class="last imgDesc">I used chartjs.org to create these widgets while also making sure that the website was responsive.<br>
                 <span>Click to view live.</span></p>
               </div>
             </a>
           </div>
-        </div>
     </div>
 
 <!--================CONTACT SECTION=================-->
 
-    <div class="heading-contact" id="contact-anchor">
-      <img class="contact-h1" src="img/contact-title.svg" alt="contact-lets talk text">
+    <div id="contact-anchor">
+      <img class="contact-h1" src="img/contact-head.png" alt="contact title">
     </div>
 
     <div id="contact">
-      <p>Like my work? Do you have a comment or question? Feel free to email me or contact me through my LinkedIn profile!</p>
+      <p>Like my work? Do you have a comment or question? Feel free to message me using the message form below or through my LinkedIn profile!</p>
+
+        <form class="contact clearfix" action="mail.php" method="post" id="msgForm">
+          <fieldset>
+  
+            <input type="text" id="name" name="user_name" placeholder="Name" required>
+
+            <input type="email" id="email" name="user_email" placeholder="Email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" placeholder="Maximum of 1200 characters" required></textarea>
+
+            <button type="submit" class=".submit">Send</button>
+
+          </fieldset>
+        </form>
+
         <ul>
-          <li class="email"><a href="mailto:ginamschweizer@gmail.com"><strong>Email: </strong>ginamschweizer@gmail.com</a></li>
           <li><a href="https://www.linkedin.com/in/gina-schweizer-a3603a41"><strong>LinkedIn Profile: </strong><img class="linkedin-logo" src="img/LinkedIn-logo.svg" alt="Image of LinkedIn logo"></a></li>
         </ul>
     </div>
@@ -164,7 +193,6 @@
   <script src="js/jquery-3.1.1.min.js"></script>
   <script src="js/lightgallery.min.js"></script>
   <script src="js/lg-fullscreen.min.js"></script> 
-  <script src="js/scripts.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
         $("#lightGallery").lightGallery(); 
