Changed Contact Form to Post

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div id="contact">
       <p>Like my work? Do you have a comment or question? Feel free to message me using the message form below or through my LinkedIn profile!</p>
 
-        <form class="contact clearfix" action="mail.php" method="get" id="msgForm">
+        <form class="contact clearfix" action="mail.php" method="post" id="msgForm">
           <fieldset>
   
             <input type="text" id="name" name="user_name" placeholder="Name" required>
