--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
     <div id="about">
-      <img class="me" src="img/me2-bw.jpg" alt="picture of me" id="about-anchor">
+      <img class="me" src="img/me2-bw.png" alt="picture of me" id="about-anchor">
       <div class="about-paragraph">
         <h2 class="about-title">About</h2>
           <p>Ever since I was a little girl, I've loved expressing my creativity in any way I could. In college, I was introduced to the wonderful world of Adobe. Using Illustrator, Photoshop, and InDesign, the possibilities were endless! I started designing logos, brochures, labels and any other kind of print media and soon began to dabble in web design. I love to learn and constantly improve my skills as a designer. I would love to be part of a team who has the same interests so that we could grow together!</p>
