--- a/index.html
+++ b/index.html
@@ -23,23 +23,30 @@
     <img class="logo" src="img/header_phone.svg" alt="The website title">
 </header>
 
+
+  <div id="nav-bkg">
     <ul class="main-nav">
+      <img class="welcome" src="img/header_welcome.png" alt="welcome to my portfolio">
       <li><a href="#about-anchor">about</a></li>
       <li><a href="#work-anchor">work</a></li>
       <li><a href="#contact-anchor">contact</a></li>
     </ul>
+  </div>
 
 <!--================ABOUT SECTION=================-->
 
-
-    <div id="about">
-      <img class="me" src="img/me2-bw.png" alt="picture of me" id="about-anchor">
-      <div class="about-paragraph">
-        <h2 class="about-title">About</h2>
-          <p>Ever since I was a little girl, I've loved expressing my creativity in any way I could. In college, I was introduced to the wonderful world of Adobe. Using Illustrator, Photoshop, and InDesign, the possibilities were endless! I started designing logos, brochures, labels and any other kind of print media and soon began to dabble in web design. I love to learn and constantly improve my skills as a designer. I would love to be part of a team who has the same interests so that we could grow together!</p>
-          <p>Feel free to send me a message or browse around my portfolio.</p>
+      <div id="about-anchor">
+        <img class="about-h1" src="img/about-head.png" alt="about work title">
       </div>
-    </div>
+
+      <div id="about">
+        <img class="me" src="img/me2-bw-nodrop.jpg" alt="picture of me">
+          <div class="about-paragraph">
+            <h2 class="about-title">About</h2>
+              <p>Ever since I was a little girl, I've loved expressing my creativity in any way I could. In college, I was introduced to the wonderful world of Adobe. Using Illustrator, Photoshop, and InDesign, the possibilities were endless! I started designing logos, brochures, labels and any other kind of print media and soon began to dabble in web design. I love to learn and constantly improve my skills as a designer. I would love to be part of a team who has the same interests so that we could grow together!</p>
+              <p>Feel free to send me a <a href="#contact-anchor">message</a> or browse around my portfolio.</p>
+          </div>
+      </div>
 
 <!--================WORK SECTION=================-->
 
@@ -159,6 +166,8 @@
 
 <!--================CONTACT SECTION=================-->
 
+    <div id="contact-bkg">
+
     <div id="contact-anchor">
       <img class="contact-h1" src="img/contact-head.png" alt="contact title">
     </div>
@@ -185,6 +194,7 @@
           <li><a href="https://www.linkedin.com/in/gina-schweizer-a3603a41"><strong>LinkedIn Profile: </strong><img class="linkedin-logo" src="img/LinkedIn-logo.svg" alt="Image of LinkedIn logo"></a></li>
         </ul>
     </div>
+  </div>
 
   <footer>
     <a href="#top" class="top-link">Back to Top</a>
