--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
 
 
   <div id="nav-bkg">
+    <img class="welcome" src="img/header_welcome.png" alt="welcome to my portfolio">
     <ul class="main-nav">
-      <img class="welcome" src="img/header_welcome.png" alt="welcome to my portfolio">
       <li><a href="#about-anchor">about</a></li>
       <li><a href="#work-anchor">work</a></li>
       <li><a href="#contact-anchor">contact</a></li>
+      <img class="arrow" src="img/arrow.png">
     </ul>
+    <img class="welcome2" src="img/header_welcome.png" alt="welcome to my portfolio">
   </div>
 
 <!--================ABOUT SECTION=================-->
@@ -108,57 +110,73 @@
             <a href="https://gschweizer.github.io/Personal-Profile-Page/">
               <div class="wrap first-wrap">
                 <img class="first-web" src="img/portfolio/Personal-Profile-Page.jpg" alt="Profile website image" title="Personal Profile Project Link">
-                <p class="imgDesc">This is the my first project in the Treehouse Techdegree Program. It was also my first experience using Github.<br>
-                <span>Click to view live.</span></p>
+                  <div class="overlay">
+                    <p class="imgDesc">This is the my first project in the Treehouse Techdegree Program. It was also my first experience using Github.<br>
+                    <span>Click to view live.</span></p>
+                  </div>
               </div>
             </a>
             <a href="https://gschweizer.github.io/Online-Registration-Form/">
               <div class="wrap">
                 <img src="img/portfolio/Online-Registration-Form.jpg" alt="Online Registration website image" title="Online Registration Project Link">
-                <p class="imgDesc">This project tested my ability to create a form using HTML and CSS. I also added a few extra styling effects like some transitions when an input field is focused on.<br>
-                <span>Click to view live.</span></p>
+                  <div class="overlay">
+                    <p class="imgDesc">This project tested my ability to create a form using HTML and CSS. I also added a few extra styling effects like some transitions when an input field is focused on.<br>
+                    <span>Click to view live.</span></p>
+                </div>
               </div>
             </a>
             <a href="https://gschweizer.github.io/Interactive-Video-Player/">
               <div class="wrap">
                 <img src="img/portfolio/Interactive-Video-Player.jpg" alt="Interactive Video website image" title="Interactive Video Project Link">
-                <p class="imgDesc">This was probably one of the more challenging Treehouse projects. I needed to create a working video using JavaScript.<br>
-                <span>Click to view live.</span></p>
+                  <div class="overlay">
+                    <p class="imgDesc">This was probably one of the more challenging Treehouse projects. I needed to create a working video using JavaScript.<br>
+                    <span>Click to view live.</span></p>
+                  </div>
               </div>
             </a>
             <a href="https://gschweizer.github.io/Optimizing-Site-For-Performance/">
               <div class="wrap">
                 <img src="img/portfolio/Optimizing-Site-for-Performace.jpg" alt="Site Optimization website image" title="Site Optimization Project Link">
-                <p class="imgDesc">In web design, loading speed is key. Here, I needed to replace images to be the proper size file and minimize the number of HTTP requests.<br>
-                <span>Click to view live.</span></p>
+                  <div class="overlay">
+                    <p class="imgDesc">In web design, loading speed is key. Here, I needed to replace images to be the proper size file and minimize the number of HTTP requests.<br>
+                    <span>Click to view live.</span></p>
+                  </div>
               </div>
             </a>
             <a href="https://gschweizer.github.io/Responsive/Edited">
               <div class="wrap">
                 <img src="img/portfolio/Responsive-Layout.jpg" alt="Responsive website image" title="Responsive Project Link">
-                <p class="imgDesc">The goal here was to make this a responsive website using the 'mobile-first approach'. Later I would covert the CSS used in the project to Sass.<br>
-                <span>Click to view live.</span></p>
+                  <div class="overlay">
+                    <p class="imgDesc">The goal here was to make this a responsive website using the 'mobile-first approach'. Later I would covert the CSS used in the project to Sass.<br>
+                    <span>Click to view live.</span></p>
+                  </div>
               </div>
             </a>
             <a href="https://gschweizer.github.io/SVG-Site-Update/">
               <div class="wrap">
                 <img src="img/portfolio/SVG-Site-Update.jpg" alt="SVG Update website image" title="SVG Site Update Project Link">
-                <p class="imgDesc">Sometimes, jpeg images are unnecessary and can slow down a website. In this project, I replaced jpeg's with SVG's to improve the site's performance.<br>
-                <span>Click to view live.</span></p>
+                  <div class="overlay">
+                    <p class="imgDesc">Sometimes, jpeg images are unnecessary and can slow down a website. In this project, I replaced jpeg's with SVG's to improve the site's performance.<br>
+                    <span>Click to view live.</span></p>
+                  </div>
               </div>
             </a>
             <a href="https://gschweizer.github.io/Use-a-Public-API-to-Create-a-Gallery/">
               <div class="wrap">
                 <img src="img/portfolio/Using-a-Public-API-to-Create-a-Gallery.jpg" alt="Public API website image">
-                <p class="imgDesc">Using a public API can improve user interaction and the speed of the site.<br>
-                <span>Click o view live.</span></p>
+                <div class="overlay">
+                  <p class="imgDesc">Using a public API can improve user interaction and the speed of the site.<br>
+                  <span>Click o view live.</span></p>
+                </div>
               </div>
             </a>
             <a href="https://gschweizer.github.io/Web-App-Dashboard/">
               <div class="wrap last-wrap">
                 <img src="img/portfolio/Web-App-Dashboard.jpg" alt="Online Registration website image" title="Online Registration Project Link">
-                <p class="last imgDesc">I used chartjs.org to create these widgets while also making sure that the website was responsive.<br>
-                <span>Click to view live.</span></p>
+                  <div class="overlay">
+                    <p class="last imgDesc">I used chartjs.org to create these widgets while also making sure that the website was responsive.<br>
+                    <span>Click to view live.</span></p>
+                  </div>
               </div>
             </a>
           </div>
