Sticky Header on Desktop

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 <!--================ABOUT SECTION=================-->
 
+<div class="main">
+
       <div id="about-anchor">
         <img class="about-h1" src="img/about-head.png" alt="about work title">
       </div>
@@ -213,6 +215,7 @@
         </ul>
     </div>
   </div>
+</div> <!--main class end-->
 
   <footer>
     <a href="#top" class="top-link">Back to Top</a>
@@ -220,7 +223,8 @@
 
   <script src="js/jquery-3.1.1.min.js"></script>
   <script src="js/lightgallery.min.js"></script>
-  <script src="js/lg-fullscreen.min.js"></script> 
+  <script src="js/lg-fullscreen.min.js"></script>
+  <script src="js/scripts.js"></script> 
   <script type="text/javascript">
     $(document).ready(function() {
         $("#lightGallery").lightGallery(); 
